--- a/bug-solving/package.json
+++ b/bug-solving/package.json
@@ -28,6 +28,7 @@
     "firebase": "^8.3.1",
     "firebaseui": "^4.8.0",
     "firebaseui-angular": "^5.1.2",
+    "moment": "^2.29.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
