--- a/bug-solving/package.json
+++ b/bug-solving/package.json
@@ -29,8 +29,9 @@
     "firebaseui": "^4.8.0",
     "firebaseui-angular": "^5.1.2",
     "moment": "^2.29.1",
+    "ng-multiselect-dropdown": "^0.3.4",
     "rxjs": "~6.6.0",
-    "tslib": "^2.0.0",
+    "tslib": "^2.2.0",
     "zone.js": "~0.11.3"
   },
   "devDependencies": {
