--- a/bug-solving/package.json
+++ b/bug-solving/package.json
@@ -25,13 +25,16 @@
     "@angular/router": "~11.2.5",
     "@ng-bootstrap/ng-bootstrap": "^9.0.2",
     "bootstrap": "^4.5.0",
+    "express": "^4.17.1",
     "firebase": "^8.3.1",
     "firebaseui": "^4.8.0",
     "firebaseui-angular": "^5.1.2",
     "kill-port": "^1.6.1",
     "moment": "^2.29.1",
     "ng-multiselect-dropdown": "^0.3.4",
+    "ngx-socket-io": "^4.0.0",
     "rxjs": "~6.6.0",
+    "socket.io": "^4.0.1",
     "tslib": "^2.2.0",
     "zone.js": "~0.11.3"
   },
